--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,25 @@
 Thumbs.db
 ehthumbs.db
 
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
 # Folder config file
 Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+
+# Build results
+
+[Dd]ebug/
+[Rr]elease/
+x64/
+build/
+[Bb]in/
+[Oo]bj/
 
 # Windows Installer files
 *.cab
@@ -16,6 +30,42 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+*_i.c
+*_p.c
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.log
+*.scc
+
+# Others
+sql/
+*.Cache
+ClientBin/
+[Ss]tyle[Cc]op.*
+~$*
+*~
+*.dbmdl
+*.[Pp]ublish.xml
+*.pfx
+*.publishsettings
 
 # =========================
 # Operating System Files
