add packages in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ ClientBin/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# NuGet Packages Directory
+## TODO: If you have NuGet Package Restore enabled, uncomment the next line
+packages/
