--- a/gsgaPoker/GSGA-Poker.App.csproj
+++ b/gsgaPoker/GSGA-Poker.App.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\icon.png" />
     <Content Include="index.html" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\gsgapoker.pubxml" />
